fix: fix search bar font not aligned issue

--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -74,7 +74,8 @@
 }
 
 .search-input {
-    --clr-text: var(--clr-disabled);
+    font-family: inherit;
+    font-weight: 500;
     width: 0;
     height: var(--height);
     font-size: 1.2rem;
